--- a/ProjectFolderTest/ProjectFolderTest.csproj
+++ b/ProjectFolderTest/ProjectFolderTest.csproj
@@ -11,5 +11,14 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
         <PackageReference Include="System.Composition" Version="7.0.0" />
     </ItemGroup>
+<Otherwise> 
+<ItemGroup>
+		<PackageReference Include="Slots" Version="3.1.*" /> 
+		<PackageReference Include="StateMachine" Version="5.2.*" /> 
+		<PackageReference Include="CryptoRng" Version="5.2.*" /> 
+		<PackageReference Include="Common.SlotEngine" Version="5.2.*" /> 
+		<PackageReference Include="com.aristocrat.jackpot-dtos" Version="3.0.*" /> 
+</ItemGroup>
+</Otherwise>
 
 </Project>
