--- a/ProjectFolderTest/ProjectFolderTest.csproj
+++ b/ProjectFolderTest/ProjectFolderTest.csproj
@@ -2,7 +2,7 @@
 	<!--GENERAL CONFIGURATION-->
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
-        <Version>2.1.0</Version>
+        <Version>3.0.0</Version>
     </PropertyGroup>
 	<!--PACKAGE REFERENCES-->
     <ItemGroup>
@@ -13,11 +13,11 @@
     </ItemGroup>
 <Otherwise> 
 <ItemGroup>
-		<PackageReference Include="Slots" Version="3.1.*" /> 
-		<PackageReference Include="StateMachine" Version="5.2.*" /> 
-		<PackageReference Include="CryptoRng" Version="5.2.*" /> 
-		<PackageReference Include="Common.SlotEngine" Version="5.2.*" /> 
-		<PackageReference Include="com.aristocrat.jackpot-dtos" Version="3.0.*" /> 
+		<PackageReference Include="Slots" Version="3.0.*.*" /> 
+		<PackageReference Include="StateMachine" Version="3.0.*.*" /> 
+		<PackageReference Include="CryptoRng" Version="3.0.*.*" /> 
+		<PackageReference Include="Common.SlotEngine" Version="3.0.*.*" /> 
+		<PackageReference Include="com.aristocrat.jackpot-dtos" Version="3.0.*.*" /> 
 </ItemGroup>
 </Otherwise>
 
